--- a/index.html
+++ b/index.html
@@ -39,20 +39,28 @@
             background-color: #006699;
         }
     </style>
+    <!-- Meta Pixel Code -->
+    <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '391093465420635');
+    fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=391093465420635&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
 </head>
 <body>
     <img style="width: 50px; height: 50px; margin-bottom: 20px;" src="./assets/img/xer.png" alt="">
     <div class="thank-you">Дякуємо за покупку курсу!</div>
-    <div class="message">Унікальний шанс отримати гайд по написанню продаючого оголошення! Ви навчитесь писати такі тексти, які миттєво приведуть вам учнів з фейсбуку, телеграму та сайтів типу ОЛХ.
-    3 формули для оголошень,загальні рекомендації та відео з розбором реальних прикладів всього за 120 грн 
-    </div>
-    <br>
-    <a href="https://t.me/your_telegram_bot" class="telegram-button">Перейти до оплати гайду</a>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="message">Якщо вам не подрібен гайд, отримати доступ до уроків курсу можна за цією кнопкою</div>
-    <a href="https://t.me/your_telegram_bot" class="telegram-button">Перейти до телеграм бота</a>
+    <div class="message">Отримати доступ до уроків курсу можна за цією кнопкою</div>
+    <a href="https://t.me/tutor_development_bot?start=ZGw6MTY0NDc1" class="telegram-button">Перейти до телеграм бота</a>
 </body>
 </html>
